<resources>
    <string name="app_name">MaPremiereApplication</string>
    <string name="label_name">Nom:</string>
    <string name="label_first_name">Prénom:</string>
    <string name="label_birthday">Date de naissance:</string>
    <string name="label_field_of_expertise">Domaine de compétences:</string>
    <string name="label_phone_number">Numéro de téléphone:</string>
    <string name="submit">ENVOYER!</string>
    <string name="show_calendar">Choisir la date</string>
    <string name="dialog_validation_msg">Voulez-vous confirmer ?</string>
    <string name="dialog_validation_title">Validation</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="cancelled">Annulé</string>
    <string name="welcome">Bonjour</string>
    <string name="go_to_java_version_btn">Voir la version Java</string>
    <string name="go_to_new_intent_btn">Envoyer et changer de page</string>
    <string name="my_intent_title">Informations utilisateur</string>
    <string name="go_to_xml_version_btn">Voir la version XML</string>
</resources>